@@ -76,6 +76,8 @@ Release 2.0.0 - ???
    * Handle .epub files using .htm rather than .html extensions for the
      embedded contents (TIKA-1288)
 
+   * Mime magic for ACES Images (TIKA-2628) and DPX Images (TIKA-2629)
+
 Release 1.17 - 12/8/2017
 
   ***NOTE: THIS IS THE LAST VERSION OF TIKA THAT WILL RUN
